--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "simple-sds"
 version = "0.1.0"
 authors = ["Jouni Siren <jouni.siren@iki.fi>"]
 edition = "2018"
+description = "Basic succinct data structures."
+license = "MIT"
+readme = "README.md"
+# documentation =
+# homepage = "https://github.com/jltsiren/simple-sds"
+# repository =
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
