--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,7 @@ edition = "2018"
 description = "Basic succinct data structures."
 license = "MIT"
 readme = "README.md"
-# documentation =
-# homepage = "https://github.com/jltsiren/simple-sds"
-# repository =
+# repository = "https://github.com/jltsiren/simple-sds"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
