--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/jltsiren/simple-sds"
 
+[features]
+bench = ["getopts", "libc", "rand"]
+
 [dependencies]
+getopts = { version = "0.2", optional = true }
 libc = { version = "0.2", optional = true }
 rand = { version = "0.7", optional = true }
 
@@ -17,8 +21,7 @@ rand = "0.7"
 
 [[bin]]
 name = "benchmark"
-path = "src/bin/benchmark.rs"
-required-features = ["libc", "rand"]
+required-features = ["bench"]
 test = false
 bench = false
 doc = false
