--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 repository = "https://github.com/jltsiren/simple-sds"
 
 [features]
-bench = ["getopts", "rand"]
+binaries = ["getopts", "rand"]
 
 [dependencies]
 getopts = { version = "0.2", optional = true }
@@ -20,8 +20,15 @@ rand = { version = "0.8", optional = true }
 rand = "0.8"
 
 [[bin]]
-name = "benchmark"
-required-features = ["bench"]
+name = "bv-benchmark"
+required-features = ["binaries"]
+test = false
+bench = false
+doc = false
+
+[[bin]]
+name = "wm-benchmark"
+required-features = ["binaries"]
 test = false
 bench = false
 doc = false
