--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,11 @@ binaries = ["getopts", "rand"]
 getopts = { version = "0.2", optional = true }
 libc = "0.2"
 rand = { version = "0.8", optional = true }
+rand_distr = { version = "0.4", optional = true }
 
 [dev-dependencies]
 rand = "0.8"
+rand_distr = "0.4"
 
 [[bin]]
 name = "bv-benchmark"
