--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
 name = "simple-sds"
 version = "0.3.1"
-authors = ["Jouni Siren <jouni.siren@iki.fi>"]
-edition = "2018"
-description = "Basic succinct data structures."
+edition = "2024"
+description = "Basic succinct data structures"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/jltsiren/simple-sds"
@@ -14,12 +13,12 @@ binaries = ["getopts", "rand", "rand_distr"]
 [dependencies]
 getopts = { version = "0.2", optional = true }
 libc = "0.2"
-rand = { version = "0.8", optional = true }
-rand_distr = { version = "0.4", optional = true }
+rand = { version = "0.9", optional = true }
+rand_distr = { version = "0.5", optional = true }
 
 [dev-dependencies]
-rand = "0.8"
-rand_distr = "0.4"
+rand = "0.9"
+rand_distr = "0.5"
 
 [[bin]]
 name = "bv-benchmark"
