--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@ readme = "README.md"
 repository = "https://github.com/jltsiren/simple-sds"
 
 [features]
-binaries = ["getopts", "rand", "rand_distr"]
+default = ["libc"]
+binaries = ["getopts", "libc", "rand", "rand_distr"]
 
 [dependencies]
 getopts = { version = "0.2", optional = true }
-libc = "0.2"
+libc = { version = "0.2", optional = true }
 rand = { version = "0.9", optional = true }
 rand_distr = { version = "0.5", optional = true }
 
